# Scrapling-Job-Boards-Scrapper

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: scrape.yml
core/: role_filters.py  settings.py  state.py
data/: skills_master.xlsx
pipeline/: enricher.py  enricher_node.py  scout.py
scraper/: spider.py
scraper/boards/: base.py  indeed.py  linkedin.py  mustakbil.py  rozee.py
services/: redis.py  supabase.py
tests/: test_scout.py
